fix button component

--- a/src/components/checkbox/style.scss
+++ b/src/components/checkbox/style.scss
@@ -10,6 +10,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    text-align: left;
 
     font-family: "Helvetica Neue", Arial, sans-serif;
     font-size: 14px;
