--- a/src/components/icon/style.scss
+++ b/src/components/icon/style.scss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../../assets/fonts/icomoon.eot?qx1iha');
-  src:  url('../../assets/fonts/icomoon.eot?qx1iha#iefix') format('embedded-opentype'),
-    url('../../assets/fonts/icomoon.ttf?qx1iha') format('truetype'),
-    url('../../assets/fonts/icomoon.woff?qx1iha') format('woff'),
-    url('../../assets/fonts/icomoon.svg?qx1iha#icomoon') format('svg');
+  src:  url('../../assets/fonts/icomoon.eot?b27q1u');
+  src:  url('../../assets/fonts/icomoon.eot?b27q1u#iefix') format('embedded-opentype'),
+    url('../../assets/fonts/icomoon.ttf?b27q1u') format('truetype'),
+    url('../../assets/fonts/icomoon.woff?b27q1u') format('woff'),
+    url('../../assets/fonts/icomoon.svg?b27q1u#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.x-icon-time:before {
+  content: "\e926";
+}
 .x-icon-checkbox-off:before {
   content: "\e900";
 }
